--- a/main.html
+++ b/main.html
@@ -8,7 +8,26 @@
 <body>
     <!-- Navigation Section -->
     <nav>
-        <!-- Navigation content will go here -->
+       <nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#events">Events</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="help.html" target="_blank">Help</a></li>
+    </ul>
+</nav>
+
+<section id="home">
+    <!-- Home content -->
+</section>
+
+<section id="events">
+    <!-- Events content -->
+</section>
+
+<section id="contact">
+    <!-- Contact content -->
+</section>
     </nav>
     <!-- Main Content Section -->
     <main>
